comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, enim sint? Aliquid, possimus. Dicta tempore unde facilis libero aliquid natus doloribus! Veritatis aut eligendi quaerat vitae explicabo aspernatur dolorem porro.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis accusantium assumenda possimus nostrum maxime reprehenderit doloribus dolore facere autem qui? Distinctio veritatis odit quas perspiciatis aperiam cupiditate eveniet aspernatur dolorum.</p>
         </article>
     </main>
     
