--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, enim sint? Aliquid, possimus. Dicta tempore unde facilis libero aliquid natus doloribus! Veritatis aut eligendi quaerat vitae explicabo aspernatur dolorem porro.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. 
+            Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. 
+            Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis accusantium assumenda possimus nostrum maxime reprehenderit doloribus dolore facere autem qui? Distinctio veritatis odit quas perspiciatis aperiam cupiditate eveniet aspernatur dolorum.</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. 
+            Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML 
+            por meio do <abbr title="Document Object Model">DOM</abbr>.</p>
         </article>
     </main>
     
